Fixed horizontal overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .nav {
   display: flex;
-  width: 100vw;
+  width: 100%;
   margin: 0%;
   background: linear-gradient(180deg, #68523f 0%, #876D57 100%);
   height: 121px;
@@ -131,7 +131,7 @@ body{
   margin-top: auto;
   background: linear-gradient(360deg, #5f4b3a 0%, #876D57 100%);
   height: 150px;
-  width: 100vw;
+  width: 100%;
   flex-shrink: 0;
   border-top: 1px solid;
   border-color: black;
